feature(setup): set project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microverse Collaboritive Project 1</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <p>Hello World, we are software developers!</p> 
+    <div class="container">
+        <div class="title">
+            <h1>Dr. Norman Borlaug</h1>
+            <p>The man who saved a billion lives</p>
+        </div>
+        <div class="image"></div>
+        <div class="content"></div>
+    </div>
 </body>
 </html>
