--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <h1>Dr. Norman Borlaug</h1>
             <p>The man who saved a billion lives</p>
         </div>
-        <div class="image"></div>
+        <div class="image">
+            <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="image">
+            <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
+        </div>
         <div class="content"></div>
     </div>
 </body>
